--- a/src/view/primeFaces/propertyEditors/IncludePropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/IncludePropertyEditor.mxml
@@ -4,9 +4,10 @@
                                   xmlns:suportclasses="view.suportClasses.*" 
 							      xmlns:primeFaces="view.primeFaces.forms.*" 
 							      xmlns:forms="view.forms.*"
-								  preinitialize="onPreinit()">
+								  preinitialize="onPreinit()" creationComplete="onCreationCompletes(event)">
 	<fx:Script>
 		<![CDATA[
+			import mx.events.FlexEvent;
 			
 			import utils.MoonshineBridgeUtils;
 			
@@ -15,6 +16,11 @@
 				// central repository to use in different Include property editor components
 				// at same time 
 				MoonshineBridgeUtils.moonshineBridge.getXhtmlFileUpdates(MoonshineBridgeUtils.onXHtmlFilesUpdated);
+			}
+			
+			protected function onCreationCompletes(event:FlexEvent):void
+			{
+				ddl.collectionHost = MoonshineBridgeUtils;
 			}
 			
 		]]>
@@ -30,7 +36,6 @@
 
     <forms:DropdownListForm id="ddl" 
 							label="File Name" textProperty="title" 
-							collectionProperty="filesList" labelField="resourcePath"
-							creationComplete="ddl.collectionHost=MoonshineBridgeUtils"/> <!-- _this_ not constructed to use in binding will throw compiler warning -->
+							collectionProperty="filesList" labelField="resourcePath"/> <!-- _this_ not constructed to use in binding will throw compiler warning -->
 
 </suportclasses:BasePropertyEditor>
