PrimeFaces: Add DataTable component (reference prominic/Moonshine-IDE#199)

--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -27,6 +27,7 @@
 		import view.flex.surfaceComponents.components.Window;
 		import view.primeFaces.surfaceComponents.components.AutoCompleteDropDownList;
 		import view.primeFaces.surfaceComponents.components.Button;
+		import view.primeFaces.surfaceComponents.components.DataTable;
 		import view.primeFaces.surfaceComponents.components.Fieldset;
 		import view.primeFaces.surfaceComponents.components.Include;
 		import view.primeFaces.surfaceComponents.components.InputMask;
@@ -83,6 +84,7 @@
 					new ComponentListItem("AutoComplete", AutoCompleteDropDownList),
 					new ComponentListItem("TabView", TabView),
 					new ComponentListItem("Tree", view.primeFaces.surfaceComponents.components.Tree),
+					new ComponentListItem("DataTable", DataTable),
 					new ComponentListItem("Fieldset", Fieldset),
 					new ComponentListItem("Include", Include)
 				]);
