--- a/src/view/forms/DropdownListForm.mxml
+++ b/src/view/forms/DropdownListForm.mxml
@@ -2,7 +2,7 @@
 <suportclasses:BasePropertyEditorForm
         xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
-        xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:suportclasses="view.suportClasses.*"
+        xmlns:suportclasses="view.suportClasses.*"
         creationComplete="onCreationCompletes(event)" skinClass="skins.FormSkin">
 
     <suportclasses:layout>
