- DataTable property editor updated with add/edit/delete and XML generation to save/retrieve (reference prominic/Moonshine-IDE#228) - Fixed issue where scroll to bottom and editing was not working effectively in TabForm during item addition (reference prominic/Moonshine-IDE#199)

--- a/src/view/forms/TextForm.mxml
+++ b/src/view/forms/TextForm.mxml
@@ -12,7 +12,7 @@
     <s:FormItem label="{label}" skinClass="skins.StackedFormItemSkin">
         <s:TextInput id="textInput"
                      text="{bindableText}" width="100%" minWidth="156" maxChars="{_maxChar}" restrict="{restrict}"
-                     change="textInput_changeHandler(event)" skinClass="skins.TextInputSkin"/>
+                     change="textInput_changeHandler(event)" skinClass="skins.TextInputSkin" prompt="{prompt}"/>
     </s:FormItem>
 
     <fx:Script><![CDATA[
@@ -23,6 +23,7 @@
 
         private var _binding:ChangeWatcher;
 		
+		[Bindable] public var prompt:String;
 		[Bindable] public var restrict:String;
 
         [Bindable]
