--- a/src/view/primeFaces/propertyEditors/DataTablePropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/DataTablePropertyEditor.mxml
@@ -2,18 +2,7 @@
 <suportclasses:BasePropertyEditor xmlns:fx="http://ns.adobe.com/mxml/2009"
 								  xmlns:s="library://ns.adobe.com/flex/spark"
 								  xmlns:suportclasses="view.suportClasses.*"
-								  xmlns:primeFaces="view.primeFaces.forms.*" xmlns:forms="view.forms.*"
-								  creationComplete="onCreationCompletes(event)">
-	<fx:Script>
-		<![CDATA[
-			import mx.events.FlexEvent;
-			
-			protected function onCreationCompletes(event:FlexEvent):void
-			{
-			}
-			
-		]]>
-	</fx:Script>
+								  xmlns:primeFaces="view.primeFaces.forms.*" xmlns:forms="view.forms.*">
 	<suportclasses:layout>
         <s:VerticalLayout id="thisLayout" gap="10" padding="10" horizontalAlign="contentJustify"/>
     </suportclasses:layout>
@@ -22,7 +11,8 @@
 
 	<s:FormHeading label="Table Data" skinClass="skins.FormHeadingSkin" />
 	<forms:TextForm label="Var" textProperty="tableVar"/>
-	<forms:TextForm label="Value" textProperty="tableValue"/>
+	<forms:TextForm label="Value" textProperty="tableValue"
+					prompt="#\{class.field\}"/>
 	
 	<s:FormHeading label="Column Data" skinClass="skins.FormHeadingSkin" />
 	<primeFaces:DataTableForm width="100%"/>
