- List usage replaced with DataGrid - Fixed blank cell issue when column 'Value' field entered for the first time (report by Joel) - Added column reordering by DataGrid row drag enabled (reference prominic/Moonshine-IDE#228)

--- a/src/skins/PropertyEditorContainerSkin.mxml
+++ b/src/skins/PropertyEditorContainerSkin.mxml
@@ -22,7 +22,7 @@
 		</s:stroke>
 	</s:Line>
 
-	<s:Scroller width="100%" height="100%" minWidth="0" minHeight="0">
+	<s:Scroller width="100%" height="100%" minWidth="0" minHeight="0" horizontalScrollPolicy="off">
 		<s:Group id="contentGroup" clipAndEnableScrolling="true">
 		</s:Group>
 	</s:Scroller>
