--- a/src/view/primeFaces/forms/DataTableForm.mxml
+++ b/src/view/primeFaces/forms/DataTableForm.mxml
@@ -7,26 +7,21 @@
         creationComplete="onTabFormCreationComplete(event)">
 	<fx:Script>
 		<![CDATA[
-			
 			import mx.binding.utils.BindingUtils;
 			import mx.binding.utils.ChangeWatcher;
-			import mx.collections.ArrayCollection;
+			import mx.events.DragEvent;
 			import mx.events.FlexEvent;
 			
-			import spark.components.DataGroup;
-			import spark.events.IndexChangeEvent;
+			import spark.events.GridItemEditorEvent;
 			
 			import data.DataProviderListItem;
 			
-			import utils.GenericUtils;
-			
-			import view.interfaces.ISelectableItemsComponent;
 			import view.primeFaces.surfaceComponents.components.DataTable;
 			
 			[Bindable] public var tableVar:String;
 			
 			private var _binding:ChangeWatcher;
-			private var _label:String = "Items";
+			private var _label:String = "Columns";
 			
 			[Bindable("labelChange")]
 			public function get label():String
@@ -46,35 +41,20 @@
 			
 			private function editSelectedItem():void
 			{
-				var item:DataProviderListItem = DataProviderListItem(this.itemsList.selectedItem);
-				var group:DataGroup = this.itemsList.dataGroup;
-				
-				var itemCount:int = group.numElements;
-				for (var i:int = 0; i < itemCount; i++)
-				{
-					var itemRenderer:DataTableColumnFormItemRenderer = group.getElementAt(i) as DataTableColumnFormItemRenderer;
-					if (!itemRenderer)
-					{
-						continue;
-					}
-					if (itemRenderer.data === item)
-					{
-						itemRenderer.startEditing();
-						break;
-					}
-				}
+				dgColumns.ensureCellIsVisible(dgColumns.selectedIndex);
+				dgColumns.startItemEditorSession(dgColumns.selectedIndex, 0);
 			}
 			
 			private function addItemButton_clickHandler(event:MouseEvent):void
 			{
 				var listItem:DataProviderListItem = new DataProviderListItem("Title");
-				itemsList.dataProvider.addItem(listItem);
+				dgColumns.dataProvider.addItem(listItem);
+
+				updateToOwner();
 				
-				onItemsListEditingFinished(null);
-				GenericUtils.listScrollToBottom(itemsList);
-				
-				this.itemsList.selectedItem = listItem;
-				editSelectedItem();
+				dgColumns.validateNow();
+				dgColumns.setSelectedIndex(dgColumns.dataProvider.length - 1);
+				callLater(editSelectedItem);
 			}
 			
 			private function editItemButton_clickHandler(event:MouseEvent):void
@@ -84,23 +64,12 @@
 			
 			private function deleteItemButton_clickHandler(event:MouseEvent):void
 			{
-				itemsList.dataProvider.removeItemAt(itemsList.selectedIndex);
-				
-				onItemsListEditingFinished(null);
-			}
-			
-			private function itemsList_changeHandler(event:IndexChangeEvent):void
-			{
-				if (selectedItem is ISelectableItemsComponent)
-				{
-					ISelectableItemsComponent(selectedItem).selectedIndex = event.newIndex;
-				}
+				dgColumns.dataProvider.removeItemAt(dgColumns.selectedIndex);
+				updateToOwner();
 			}
 			
 			private function onTabFormCreationComplete(event:FlexEvent):void
 			{
-				itemsList.addEventListener("editingFinished", onItemsListEditingFinished);
-				
 				updateColumnList();
 				updateBinding();
 			}
@@ -108,13 +77,13 @@
 			private function updateColumnList():void
 			{
 				var grid:DataTable = (selectedItem as DataTable);
-				itemsList.dataProvider = grid.tableColumnDescriptor;
+				dgColumns.dataProvider = grid.tableColumnDescriptor;
 			}
 			
-			private function onItemsListEditingFinished(event:Event):void
+			private function updateToOwner():void
 			{
 				var grid:DataTable = (selectedItem as DataTable);
-				grid.tableColumnDescriptor = itemsList.dataProvider as ArrayCollection;
+				grid.generateColumns();
 			}
 			
 			private function updateBinding():void
@@ -137,6 +106,27 @@
 				(selectedItem as DataTable).tableColumnDescriptor.refresh();
 			}
 			
+			protected function onRowDragAndDropped(event:DragEvent):void
+			{
+				updateToOwner();
+			}
+			
+			protected function onRowDragStarts(event:DragEvent):void
+			{
+				dgColumns.endItemEditorSession();
+			}
+			
+			protected function onItemEditFinished(event:GridItemEditorEvent):void
+			{
+				var grid:DataTable = (selectedItem as DataTable);
+				grid.generateColumns();
+			}
+			
+			private function formattedValue(item:Object,column:GridColumn):String
+			{
+				return (item.value ? "#{"+ tableVar +"."+ item.value +"}" : "#{"+ tableVar +".}");
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -144,24 +134,28 @@
         <s:FormLayout horizontalAlign="contentJustify"/>
     </suportclasses:layout>
 
-    <s:FormItem label="{label}" skinClass="skins.StackedFormItemSkin">
-        <s:List id="itemsList" width="100%" height="100%"
-                dragEnabled="true" dragMoveEnabled="true" dropEnabled="true"
-                itemRenderer="view.primeFaces.forms.DataTableColumnFormItemRenderer"
-                change="itemsList_changeHandler(event)">
-            <s:layout>
-                <s:VerticalLayout gap="0" horizontalAlign="contentJustify"
-                                  requestedRowCount="5" requestedMaxRowCount="5"/>
-            </s:layout>
-        </s:List>
+    <s:FormItem label="{label}" skinClass="skins.StackedFormItemSkin" height="100%">
+		<s:DataGrid id="dgColumns"
+					width="100%" height="100%"
+					editable="true" sortableColumns="false" draggableColumns="false"
+					dragEnabled="true" dragMoveEnabled="true" dropEnabled="true"
+					dragStart="onRowDragStarts(event)" dragDrop="onRowDragAndDropped(event)"
+					gridItemEditorSessionSave="updateToOwner()">
+			<s:columns>
+				<s:ArrayList>
+					<s:GridColumn dataField="label" headerText="Title"/>
+					<s:GridColumn dataField="value" headerText="Value" labelFunction="formattedValue"/>
+				</s:ArrayList>
+			</s:columns>
+		</s:DataGrid>
         <s:HGroup>
             <s:Button width="100%" styleName="addDataProviderItemButton" toolTip="Add Item"
                       click="addItemButton_clickHandler(event)"/>
             <s:Button styleName="editDataProviderItemButton" toolTip="Edit Item"
-                      enabled="{itemsList.selectedIndex !== -1}"
+                      enabled="{dgColumns.selectedIndex !== -1}"
                       click="editItemButton_clickHandler(event)"/>
             <s:Button styleName="deleteDataProviderItemButton" toolTip="Delete Item"
-                      enabled="{itemsList.selectedIndex !== -1 &amp;&amp; itemsList.dataProvider.length > 1}"
+                      enabled="{dgColumns.selectedIndex !== -1 &amp;&amp; dgColumns.dataProvider.length > 1}"
                       click="deleteItemButton_clickHandler(event)"/>
         </s:HGroup>
     </s:FormItem>
