--- a/src/view/primeFaces/propertyEditors/DataTablePropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/DataTablePropertyEditor.mxml
@@ -2,7 +2,8 @@
 <suportclasses:BasePropertyEditor xmlns:fx="http://ns.adobe.com/mxml/2009"
 								  xmlns:s="library://ns.adobe.com/flex/spark"
 								  xmlns:suportclasses="view.suportClasses.*"
-								  xmlns:primeFaces="view.primeFaces.forms.*" xmlns:forms="view.forms.*">
+								  xmlns:primeFaces="view.primeFaces.forms.*" xmlns:forms="view.forms.*"
+								  height="100%">
 	<suportclasses:layout>
         <s:VerticalLayout id="thisLayout" gap="10" padding="10" horizontalAlign="contentJustify"/>
     </suportclasses:layout>
@@ -15,7 +16,7 @@
 					prompt="#\{class.field\}"/>
 	
 	<s:FormHeading label="Column Data" skinClass="skins.FormHeadingSkin" />
-	<primeFaces:DataTableForm width="100%"/>
+	<primeFaces:DataTableForm width="100%" height="100%"/>
 	<forms:ToggleButtonSelectedForm label="Enables column resizing" textProperty="resizableColumns"/>
 	<forms:ToggleButtonSelectedForm label="Enables pagination" textProperty="paginator"/>
 	<forms:TextForm label="No data to display" textProperty="emptyMessage"/>
